--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "soma.js",
   "scripts": {
     "dev": "tsx watch src/server.ts"
   },
